Fix: @media query to allow for display of background image on iOS using background-adjustment: scroll

--- a/css/style.css
+++ b/css/style.css
@@ -181,3 +181,11 @@ caption {
     background-color: rgba(148, 54, 52, 0.8);
     color: rgb(255,255,255);
 }
+
+/* Media */
+
+/* This adjustment allows the hero image to be displayed on mobile devices (iOS) */
+@media screen and (max-device-width: 1024px){
+.callout-container {
+    background-attachment: scroll;
+}
